update social links
add telegram
add linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ minima:
     twitter: little_pure2333
     github: littlepure2333
     instagram: littlepurepill
+    telegram: littlepurepill
+    linkedin: 诗尊-王-8990a4183
 
 # Set this to true to get LaTeX math equation support
 use_math: 
